comments/iptables.rules
# Generated by iptables-save v1.6.1 on Sat Apr 20 05:51:27 2019
*nat
:PREROUTING ACCEPT [410:21395]
:INPUT ACCEPT [410:21395]
:OUTPUT ACCEPT [6:403]
:POSTROUTING ACCEPT [6:403]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.21.0.0/16 ! -o br-5709551a1eb8 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i br-5709551a1eb8 -j RETURN
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Sat Apr 20 05:51:27 2019
# Generated by iptables-save v1.6.1 on Sat Apr 20 05:51:27 2019
*filter
:INPUT ACCEPT [87:5932]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [46:4024]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -s 185.199.110.153/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 185.199.108.153/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 185.199.109.153/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 185.199.111.153/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 185.199.111.153/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 185.199.109.153/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 185.199.108.153/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 185.199.110.153/32 -p tcp -m tcp --dport 443 -j ACCEPT
COMMIT
# Completed on Sat Apr 20 05:51:27 2019
